@@ -394,6 +394,8 @@ tasks.named("licenseHeaders").configure {
 
 tasks.test {
     environment "node.roles.test", "[]"
+    systemProperty 'tests.security.manager', 'false'
+    jvmArgs += ["-Djava.security.manager=allow"]
     if (BuildParams.runtimeJavaVersion > JavaVersion.VERSION_1_8) {
         jvmArgs += ["--add-opens", "java.base/java.nio.file=ALL-UNNAMED"]
     }
